tests/nts_files/bad/link_to_elec.nts
.chipsets:
4081 n

.links:
n:1 n:7
